add information categories on application

--- a/src/main/resources/templates/applications.css
+++ b/src/main/resources/templates/applications.css
@@ -723,6 +723,10 @@ button:hover {
     .about-content p {
         flex: 1 1 100%;
     }
+
+    .help-item {
+        max-width: 45%; /* Додаємо більше гнучкості для нових категорій */
+    }
 }
 
 @media screen and (max-width: 768px) {
