--- a/src/main/resources/templates/volunteers.css
+++ b/src/main/resources/templates/volunteers.css
@@ -256,6 +256,49 @@ main {
     user-select: none;
     transition: color 0.3s ease;
 }
+img {
+    max-width: 100%;
+    height: auto;
+}
+.hero {
+    position: relative;
+    width: 100%;
+    height: 50vh;
+    overflow: hidden;
+}
+
+.hero-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+}
+
+.hero-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4); /* Оверлей для покращення читабельності */
+    z-index: 1;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 2;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    color: #fff;
+}
+
 
 .categories-list label:hover {
     color: #0066cc;
